--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,17 @@
+@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:wght@800&display=swap');
+
 html, body {
   height: 100%;
 }
+p,h1,h2,h3,li,span,address {
+  font-family: Helvetica, "Trebuchet MS", Verdana, sans-serif;
+}
+h1 {
+  font-family: 'Crimson Text', serif;
+  padding-bottom: .5em;
+  padding-top: .5em;
+}
+
 article {
   display: block;
   float: left;
@@ -29,8 +40,10 @@ article:hover {
     16px 32px 32px  #fa807212;
 }
 article img {
-  margin: 2%;
-
+  padding: 3%;
+}
+#double-feature-image {
+  display: block;
 }
 article h2 {
   display: block;
@@ -57,6 +70,7 @@ h3 {
 }
 address {
   margin-bottom: .5em;
+  line-height: 1.2em;
 }
 header {
   text-align: right; 
@@ -76,6 +90,9 @@ aside {
   margin-right: 2%;
   background-image: url(../images/salmon-bg.png);
   background-repeat: repeat;
+}
+aside p {
+  line-height: 1.2em;
 }
 a {
   text-decoration: none;
@@ -144,19 +161,20 @@ li {
  font-size: 2em;
  font-weight: bold;
  margin-right: 2em;
+
 }
 
 li:hover, a:hover {
- color: black;
- text-shadow:
-  2.8px 2.4px 2.2px rgba(0, 0, 0, 0.02);
-   
-
+ color: white;
+ text-shadow: 5px 5px 12px #ffffff89, 7px 7px 0px #d66c60;
 }
 
 /* TABLE AND FORM */
 form {
   text-align: left;
+}
+dt {
+  font-family: "myFont", "Bitstream Vera Serif", serif;
 }
 label {
   display: block;
